--- a/style.css
+++ b/style.css
@@ -14,3 +14,9 @@ body{background-color: #305050;
     color: #ffa500;
     font-size: 24px;
 }
+
+.linha{
+    border-bottom: 1px solid #808080;
+    border-top: 1px solid #808080;
+}
+
